test/python/expected/pymssql/TestSimpleErrorsWithImplicitTran.out
#Setup
CREATE TABLE simpleErrorTable (a varchar(15) UNIQUE, b nvarchar(25), c int PRIMARY KEY, d char(15) DEFAULT 'Whoops!', e nchar(25), f datetime, g numeric(4,1) CHECK (g >= 103.5))
~~ERROR (Code: 33557097)~~
~~ERROR (Message: 'Nullable UNIQUE constraint is not supported. Please use babelfishpg_tsql.escape_hatch_unique_constraint to ignore or add a NOT NULL constraintDB-Lib error message 20018, severity 16:\nGeneral SQL Server error: Check messages from the SQL Server\n')~~

SET IMPLICIT_TRANSACTIONS ON

#Run error handling tests
include#!#input/errorHandling/TestSimpleErrors.sql
~~ERROR (Code: 33557097)~~
~~ERROR (Message: "syntax error near '!' at line 1 and character position 8DB-Lib error message 20018, severity 16:\nGeneral SQL Server error: Check messages from the SQL Server\n")~~


#Cleanup
IF @@trancount > 0 ROLLBACK
SET IMPLICIT_TRANSACTIONS OFF
DROP TABLE simpleerrortable
~~ERROR (Code: 3701)~~
~~ERROR (Message: 'table "simpleerrortable" does not existDB-Lib error message 20018, severity 16:\nGeneral SQL Server error: Check messages from the SQL Server\n')~~

